--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Hi, I'm Satbir
 subtitle: Coder | Learner | Tech enthusiast
 use-site-title: true
 bigimg:
-  - "/img/big-imgs/home_wallpaper.jpg" : "
+  - "/img/big-imgs/home_wallpaper.jpg" : " "
   
 ---
 
